--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -10,7 +10,7 @@
         </a>
       </li><!-- End Dashboard Nav -->
 
-      <li class="nav-heading">Pages</li>
+      <li class="nav-heading">Activity Report</li>
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="#">
@@ -25,6 +25,8 @@
           <span>Data Activity</span>
         </a>
       </li><!-- End Register Page Nav -->
+
+      <li class="nav-heading">Data Review</li>
 
     </ul>
 
