--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -4,7 +4,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="#">
+        <a class="nav-link " href="/dashboard">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -13,21 +13,37 @@
       <li class="nav-heading">Activity Report</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
+        <a class="nav-link collapsed" href="/activity">
           <i class="bi bi-person"></i>
           <span>Activity</span>
         </a>
       </li><!-- End Activity Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
+        <a class="nav-link collapsed" href="/activity/data">
           <i class="bi bi-card-list"></i>
           <span>Data Activity</span>
         </a>
-      </li><!-- End Register Page Nav -->
+      </li><!-- End Activity Page Nav -->
 
       <li class="nav-heading">Data Review</li>
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#">
+          <i class="bi bi-layout-text-window-reverse"></i>
+          <span>Review</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#">
+          <i class="bi bi-bar-chart"></i>
+          <span>Summary</span>
+        </a>
+      </li>
+
+      <li class="nav-heading">Review Lv3</li>
 
     </ul>
 
   </aside><!-- End Sidebar-->
+  <!-- <span>Tables</span><i class="bi bi-chevron-down ms-auto"></i> -->
