--- a/views/partials/js.ejs
+++ b/views/partials/js.ejs
@@ -1,12 +1,12 @@
  <!-- Vendor JS Files -->
- <script src="style/assets/vendor/apexcharts/apexcharts.min.js"></script>
- <script src="style/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
- <script src="style/assets/vendor/quill/quill.min.js"></script>
- <script src="style/assets/vendor/simple-datatables/simple-datatables.js"></script>
- <script src="style/assets/vendor/tinymce/tinymce.min.js"></script>
+ <script src="/style/assets/vendor/apexcharts/apexcharts.min.js"></script>
+ <script src="/style/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+ <script src="/style/assets/vendor/quill/quill.min.js"></script>
+ <script src="/style/assets/vendor/simple-datatables/simple-datatables.js"></script>
+ <script src="/style/assets/vendor/tinymce/tinymce.min.js"></script>
 
  <!-- Template Main JS File -->
- <script src="style/assets/js/main.js"></script>
+ <script src="/style/assets/js/main.js"></script>
 
 </body>
 
