--- a/views/admin/users/view_signin.ejs
+++ b/views/admin/users/view_signin.ejs
@@ -44,7 +44,7 @@
               <div class="d-flex justify-content-center py-4">
                 <a href="#" class="logo d-flex align-items-center w-auto">
                   <img src="style/assets/img/logo.png" alt="">
-                  <span class="d-none d-lg-block">SONGS CSI</span>
+                  <span class="d-none d-lg-block">SAR</span>
                 </a>
               </div><!-- End Logo -->
 
