--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
 
     <div class="search-bar">
         <div class="tanggal">
-          <p>Tanggal : </p>
+          <p>Date : </p>
         </div>
     </div><!-- End Search Bar -->
 
