--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -107,27 +107,27 @@
         </a>
         <ul id="master-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="#">
+            <a href="/employe">
               <i class="bi bi-circle"></i><span>Employee</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="/department">
               <i class="bi bi-circle"></i><span>Department</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="/client">
               <i class="bi bi-circle"></i><span>Client</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="/jobs">
               <i class="bi bi-circle"></i><span>Job Type</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="/work">
               <i class="bi bi-circle"></i><span>Work Days</span>
             </a>
           </li>
@@ -137,7 +137,7 @@
       <li class="nav-heading">Settings</li>
       
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
+        <a class="nav-link collapsed" href="/configuration">
           <i class="bi bi-gear-fill"></i>
           <span>Configuration</span>
         </a>
