--- a/views/admin/Job/view_job.ejs
+++ b/views/admin/Job/view_job.ejs
@@ -5,11 +5,11 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Department</h1>
+      <h1>Jobs</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item active">Department</li>
+          <li class="breadcrumb-item active">Jobs</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
@@ -20,15 +20,15 @@
 
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Data Department</h5>
+                    <h5 class="card-title">Data Pekerjaan</h5>
 
                     <!-- Default Tabs -->
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link active" id="Data-tab" data-bs-toggle="tab" data-bs-target="#Data" type="button" role="tab" aria-controls="Data" aria-selected="true">Data</button>
+                            <button class="nav-link active" id="Data-tab" data-bs-toggle="tab" data-bs-target="#Data" type="button" role="tab" aria-controls="Data" aria-selected="true">Data Pekerjaan</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="Add-tab" data-bs-toggle="tab" data-bs-target="#Add" type="button" role="tab" aria-controls="Add" aria-selected="false">Tambah</button>
+                            <button class="nav-link" id="Add-tab" data-bs-toggle="tab" data-bs-target="#Add" type="button" role="tab" aria-controls="Add" aria-selected="false">Tambah Data</button>
                         </li>
                     </ul>
                     <div class="tab-content pt-2" id="myTabContent">
@@ -39,10 +39,10 @@
                                       <thead>
                                         <tr>
                                           <th><abbr title="Position">No</abbr></th>
-                                          <th>Fullname</th>
-                                          <th><abbr title="Played">Orde</abbr></th>
-                                          <th><abbr title="Won">State</abbr></th>
-                                          <th>Create By</th>
+                                          <th>Departemen</th>
+                                          <th><abbr title="Played">Nama Lengkap</abbr></th>
+                                          <th><abbr title="Won">Stat</abbr></th>
+                                          <th>Option</th>
                                         </tr>
                                       </thead>
                                       <tbody>
@@ -63,14 +63,8 @@
                                           <th>3</th>
                                           <td><a href="https://en.wikipedia.org/wiki/Tottenham_Hotspur_F.C." title="Tottenham Hotspur F.C.">Tottenham Hotspur</a></td>
                                           <td>38</td>
-                                          <td>19</td>
-                                          <td>13</td>
-                                          <td>6</td>
-                                          <td>69</td>
-                                          <td>35</td>
-                                          <td>+34</td>
-                                          <td>70</td>
                                           <td>Qualification for the <a href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Group_stage" title="2016–17 UEFA Champions League">Champions League group stage</a></td>
+                                          <td>19</td>
                                         </tr>
                                         <tr class="is-selected">
                                           <th>4</th>
@@ -93,19 +87,22 @@
                         <div class="tab-pane fade" id="Add" role="tabpanel" aria-labelledby="Add-tab">
                             <div class="card">
                                 <div class="card-body">
-                                  <h5 class="card-title">New Department</h5>
+                                  <h5 class="card-title">Tambah Pekerjaan</h5>
                     
                                   <form class="row g-3">
                                     <div class="col-md-6">
                                       <div class="form-floating">
-                                        <input type="text" class="form-control" id="fullname" placeholder="Your Name">
-                                        <label for="fullname">Your Name</label>
+                                        <label for="departemen" class="form-label"></label>
+                                        <select id="departemen" class="form-select">
+                                          <option selected>Choose Departemen...</option>
+                                          <option>...</option>
+                                        </select>
                                       </div>
                                     </div>
                                     <div class="col-md-6">
                                       <div class="form-floating">
-                                        <input type="text" class="form-control" id="State" placeholder="State">
-                                        <label for="State">State</label>
+                                        <input type="text" class="form-control" id="fullname" placeholder="Nama Pekerjaan">
+                                        <label for="fullname">Nama Pekerjaan</label>
                                       </div>
                                     </div>
                                     <div class="text-center">
