--- a/views/admin/activity/view_activity.ejs
+++ b/views/admin/activity/view_activity.ejs
@@ -22,7 +22,14 @@
             <div class="card">
 
               <div class="card-body">
-                <h5 class="card-title">Recent Sales <span>| Today</span></h5>
+                <div class="card-title">
+                    <button class="btn btn-info">
+                      <a href="/activity/add">
+                        <i class="bi bi-plus"></i>
+                        <span></span>
+                      </a>
+                    </button>
+                </div>
 
                 <table class="table table-borderless datatable">
                   <thead>
