--- a/views/admin/activity/create.ejs
+++ b/views/admin/activity/create.ejs
@@ -39,54 +39,20 @@
                 </div>
                 <div class="col-md-4">
                   <div class="form-floating">
-                    <input type="datetime-local" class="form-control" id="floatingName" placeholder="Your Name">
-                    <label for="floatingName">Date</label>
-                  </div>
-                </div>
-                <div class="col-6">
-                  <div class="form-floating">
-                    <textarea class="form-control" placeholder="Case" id="floatingTextarea" style="height: 100px;"></textarea>
-                    <label for="floatingTextarea">Case</label>
-                  </div>
-                </div>
-                <div class="col-6">
-                  <div class="form-floating">
-                    <textarea class="form-control" placeholder="Job Description" id="floatingTextarea" style="height: 100px;"></textarea>
-                    <label for="floatingTextarea">Job Description</label>
-                  </div>
-                </div>
-                <div class="col-6">
-                  <div class="form-floating">
-                    <textarea class="form-control" placeholder="Action" id="floatingTextarea" style="height: 100px;"></textarea>
-                    <label for="floatingTextarea">Action</label>
-                  </div>
-                </div>
-                <div class="col-6">
-                  <div class="form-floating">
-                    <textarea class="form-control" placeholder="Resume" id="floatingTextarea" style="height: 100px;"></textarea>
-                    <label for="floatingTextarea">Resume</label>
+                    <input type="text" class="form-control" id="floatingName" placeholder="Department">
+                    <label for="Department">IDRevistaf ??</label>
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="form-floating mb-3">
-                    <select class="form-select" id="floatingSelect" aria-label="Job type">
-                      <option selected disabled>Select one</option>
-                      <option value="TS">TS</option>
-                      <option value="RnD">RnD</option>
-                      <option value="SE">SE</option>
-                      <option value="Presales">Presales</option>
-                    </select>
-                    <label for="floatingSelect">Job type</label>
+                  <div class="form-floating">
+                    <input type="datetime-local" class="form-control" id="floatingName" placeholder="Activity Date">
+                    <label for="Activity Date">Activity Date</label>
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="form-floating mb-3">
-                    <select class="form-select" id="floatingSelect" aria-label="Job Status">
-                      <option selected disabled>Select one</option>
-                      <option value="TS">Pending</option>
-                      <option value="RnD">Finish</option>
-                    </select>
-                    <label for="floatingSelect">Job Status</label>
+                  <div class="form-floating">
+                    <input type="datetime-local" class="form-control" id="floatingName" placeholder="Activity Deadline">
+                    <label for="Activity Deadline">Activity Deadline</label>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -112,31 +78,43 @@
                 <div class="col-md-4">
                   <div class="col-md-12">
                     <div class="form-floating">
-                      <input type="text" class="form-control" id="floatingCompany" placeholder="Company">
-                      <label for="floatingCompany">Company</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="col-md-12">
-                    <div class="form-floating">
                       <input type="text" class="form-control" id="floatingPhone" placeholder="Phone Number">
                       <label for="floatingPhone">Phone Number</label>
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <div class="col-md-12">
                     <div class="form-floating">
-                      <input type="file" class="form-control" id="floatingFile" placeholder="File Upload">
-                      <label for="floatingFile">File Upload</label>
+                      <input type="text" class="form-control" id="casetitle" placeholder="Case Title">
+                      <label for="casetitle">Case Title</label>
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-6">
                   <div class="form-floating">
-                    <input type="text" class="form-control" id="floatingOther" placeholder="Other..">
-                    <label for="floatingOther">Other</label>
+                    <textarea class="form-control" placeholder="Case" id="floatingTextarea" style="height: 100px;"></textarea>
+                    <label for="floatingTextarea">Case Description</label>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="form-floating">
+                    <textarea class="form-control" placeholder="Case analysis" id="floatingTextarea" style="height: 100px;"></textarea>
+                    <label for="floatingTextarea">Case analysis</label>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="form-floating">
+                    <textarea class="form-control" placeholder="Case Solving" id="floatingTextarea" style="height: 100px;"></textarea>
+                    <label for="floatingTextarea">Case Solving</label>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="col-md-12">
+                    <div class="form-floating">
+                      <input type="file" class="form-control" id="floatingFile" placeholder="Attach...">
+                      <label for="floatingFile">Attach...</label>
+                    </div>
                   </div>
                 </div>
                 <div class="text-center">
