activity review page

--- a/views/admin/activityRev/activity_review.ejs
+++ b/views/admin/activityRev/activity_review.ejs
@@ -5,7 +5,7 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Data Activity</h1>
+      <h1>Activity Review</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
@@ -22,13 +22,8 @@
             <div class="card">
 
               <div class="card-body">
-                <div class="card-title">
-                    <button class="btn btn-info">
-                      <a href="/activity/add">
-                        <i class="bi bi-plus"></i>
-                        <span></span>
-                      </a>
-                    </button>
+                <div class="title">
+                  
                 </div>
 
                 <table class="table table-borderless datatable">
