--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -25,7 +25,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="/activityRev">
               <i class="bi bi-circle"></i><span>Activity Review</span>
             </a>
           </li>
